<resources>
    <string name="app_name">VibeSpace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="logOut">Log Out</string>
    <string name="edSignInEmail">johnwick@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">********</string>
    <string name="pass">Password</string>
    <string name="cfPass">Confirm Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="create">Already have an account?</string>
    <string name="made">Don\'t have an account?</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="first">john</string>
    <string name="last">wick</string>
    <string name="setPass">Set a password</string>
    <string name="limitPass">Your password should be 8 characters long.</string>
    <string name="Continue">Continue</string>
    <string name="verifyEmail">Verify your student email</string>
    <string name="success">Verification Success!</string>
    <string name="verifyCode">Enter Verification Code</string>
    <string name="code">We have sent a verification code to</string>
    <string name="recieve">Didn\'t receive code</string>
    <string name="resend">Resend Verification Code</string>
    <string name="resend_code_time">Resend Code in</string>
    <string name="successEmail">Your Student email id is verified!</string>
    <string name="details">Enter your Details</string>
    <string name="dob">Date of Birth</string>
    <string name="dobHint">28/04/1996</string>
    <string name="choose">Choose</string>
    <string name="uni">University Name</string>
    <string name="bio">This is your bio</string>
    <string name="biotext">Bio</string>

    <string name="toast_firstName">Enter First Name</string>
    <string name="toast_lastName">Enter Last Name</string>
    <string name="error">Exception Occurred</string>

    <string name="tryAgain">Something went wrong Please Try Again</string>
    <string name="checkInternet">Check Your Internet Connection</string>
    <string name="please_wait">PLease Wait</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="please_select_dob_first">Please Select DOB First</string>
    <string name="select_university_name">Select University Name</string>
    <string name="write_your_bio">Write your bio</string>
    <string name="please_enter_valid_email_address">Please Enter Valid Email Address</string>
    <string name="please_enter_valid_password">Please Enter Valid Password</string>
    <string name="password_must_be_8_character_long">Password must be 8 character long</string>
    <string name="password_and_confirm_password_should_match_each_other">Password and Confirm Password should match each other</string>
    <string name="please_enter_valid_confirm_password">Please enter Valid Confirm Password</string>
    <string name="confirm_password_must_be_8_character_long">Confirm Password must be 8 character long</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_valid_otp">Enter Valid Otp</string>
    <string name="map">Map</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="vibespace">Vibespace</string>
    <string name="Bio">bio</string>
    <string name="BIO">Bio</string>
    <string name="create_post">Create Vibe</string>
    <string name="monetize_your_account">Monetize Your Account</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="university">University</string>
    <string name="sexuality">Sexuality</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="occupation">Occupation</string>
    <string name="logout">LogOut</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="choose_your_price">Choose your Price</string>
    <string name="_0">$0</string>
    <string name="_20">$20</string>
    <string name="price_desc">We recommend price $2 to $6</string>
    <string name="done">Done</string>
    <string name="price_confirmation">Are you sure you want to monetize your Profile?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">save</string>
    <string name="logout_confirm">Are you sure you want to Logout?</string>
    <string name="delete_confirm">Are you sure you want to <b>Delete?</b></string>
    <string name="post_visibility">Post Visibility</string>
    <string name="_24_hours">24 hours</string>
    <string name="show_avatar">Show Avatar</string>
    <string name="prompts">Prompts</string>
    <string name="text">Text</string>
    <string name="write_your_text_here">Write your text here</string>
    <string name="Create_post">Vibe</string>
    <string name="settings">Settings</string>
    <string name="private_account">Private Account</string>
    <string name="change_password">Change Password</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>

    <string name="mapbox_access_token">sk.eyJ1IjoiemltYmxlY29kZSIsImEiOiJjbGttZmh1YmwwOWIwM2VtaWJmdzVldmM4In0.Yu5NQGscXHxZ7hj1skDSHQ</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="notification">Notification</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="apply">Apply</string>
</resources>