<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    <variable
        name="viewModel"
        type="com.app.vibespace.viewModel.registration.SignUpViewModel" />
    <variable
        name="fragment"
        type="com.app.vibespace.ui.registration.SignUpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            style="@style/txtHeading"
            android:text="@string/signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etFirstName"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstName"
            style="@style/text"
            android:text="@string/fName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etFirstName"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            style="@style/editText"
            android:textColorHint="@color/colorTxt"
            android:text="@={viewModel.fName}"
            android:layout_marginTop="@dimen/_72sdp"
            android:hint="@string/first"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/LastName"
            style="@style/text"
            android:text="@string/lName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etLastName"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            style="@style/editText"
            android:text="@={viewModel.lName}"
            android:textColorHint="@color/colorTxt"
            android:hint="@string/last"
            android:importantForAutofill="no"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:maxLength="30"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFirstName"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/button"
            android:onClick="@{(view)-> fragment.onSignUp(view)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLastName"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_12ssp"
            android:text="@string/create"
            android:textColor="@color/colorTxt"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNewAccount"
            android:onClick="@{(view)->fragment.onSignIn(view)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorPrimary"
            android:text="@string/signIn"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_2sdp"
            app:layout_constraintStart_toEndOf="@+id/tvCreate"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>