<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
          name="viewModel"
          type="com.app.vibespace.viewModel.registration.SignInViewModel" />
        <variable
            name="fragment"
            type="com.app.vibespace.ui.registration.SignInFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clickable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignIn"
            style="@style/txtHeading"
            android:text="@string/signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/text"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etEmail" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/editText"
            android:text="@={viewModel.email}"
            android:layout_marginTop="@dimen/_72sdp"
            android:hint="@string/edSignInEmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorTxt"
            android:maxLength="30"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignIn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPass"
            style="@style/text"
            android:text="@string/pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etPassLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassLayout"
            style="@style/inputLayout"
            android:layout_marginTop="@dimen/_42sdp"
            android:background="@drawable/round_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPass"
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:gravity="bottom"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorTxt"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:ems="15" />

        </com.google.android.material.textfield.TextInputLayout>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvForgot"
          style="@style/text"
          android:onClick="@{(view)->fragment.forgot(view)}"
          android:text="@string/forgot"
          android:textColor="@color/colorPrimary"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_14sdp"
          app:layout_constraintTop_toBottomOf="@id/etPassLayout"
          app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/button"
            android:onClick="@{(view)-> fragment.onSignIn(view)}"
            android:layout_marginTop="104dp"
            android:text="@string/signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreate"
            style="@style/text"
            android:text="@string/made"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvNewAccount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNewAccount"
            style="@style/text"
            android:onClick="@{(view)-> fragment.onSignUp(view)}"
            android:textColor="@color/colorPrimary"
            android:text="@string/signUp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_2sdp"
            app:layout_constraintStart_toEndOf="@+id/tvCreate"
            app:layout_constraintBottom_toBottomOf="parent" />

        <include
            android:id="@+id/progressBar"
            layout="@layout/layout_progress_bar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:translationZ="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>