<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/colorWhite">

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/_10sdp"
          app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvPrice"
          style="@style/txtHeading"
          android:text="@string/choose_your_price"
          android:layout_marginTop="@dimen/_8sdp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvStartPrice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_0"
          android:textSize="@dimen/_12ssp"
          android:textColor="@color/colorTxt"
          android:layout_marginTop="@dimen/_49sdp"
          app:layout_constraintEnd_toStartOf="@id/seekBar"
          app:layout_constraintTop_toBottomOf="@id/tvPrice"
          />

      <androidx.appcompat.widget.AppCompatSeekBar
          android:id="@+id/seekBar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:progressDrawable="@drawable/custom_seek_bar"
          android:thumb="@drawable/seek_bar_thumb"
          android:max="20"
          android:progress="5"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:layout_marginTop="@dimen/_52sdp"
          android:layout_marginHorizontal="@dimen/_32sdp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tvPrice"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvEndPrice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_20"
          android:textSize="@dimen/_12ssp"
          android:textColor="@color/colorEditTxt"
          android:layout_marginTop="@dimen/_50sdp"
          app:layout_constraintStart_toEndOf="@id/seekBar"
          app:layout_constraintTop_toBottomOf="@id/tvPrice"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvPriceDesc"
          style="@style/text"
          android:text="@string/price_desc"
          android:layout_marginTop="@dimen/_22sdp"
          android:layout_marginStart="@dimen/_20sdp"
          app:layout_constraintTop_toBottomOf="@id/seekBar"
          app:layout_constraintStart_toStartOf="parent"
          />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btnDone"
          style="@style/button"
          android:layout_marginTop="@dimen/_72sdp"
          android:text="@string/done"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tvPriceDesc" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>