<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSuccess"
            style="@style/txtHeading"
            android:text="@string/success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSuccess"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_64sdp"
            app:srcCompat="@drawable/ic_success"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSuccess"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSuccessEmail"
            android:text="@string/successEmail"
            style="@style/text"
            android:layout_marginTop="@dimen/_42sdp"
            app:layout_constraintTop_toBottomOf="@id/ivSuccess"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSuccess"
            style="@style/button"
            android:text="@string/Continue"
            android:layout_marginTop="@dimen/_32sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSuccessEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_12ssp"
            android:text="@string/create"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorPrimary"
            android:text="@string/signIn"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_2sdp"
            app:layout_constraintStart_toEndOf="@+id/tvCreate"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>