<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:translationZ="10dp"
    android:background="@drawable/round_progress_bar">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmation"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_14sdp"
        android:text="@string/logout_confirm"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnYes"
        android:elevation="@dimen/_2sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:background="@drawable/round_btn"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:text="@string/yes"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmation" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNo"
        android:elevation="@dimen/_2sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorEditTxt"
        android:background="@drawable/round_no_btn"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:text="@string/no"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmation"
        />
</androidx.constraintlayout.widget.ConstraintLayout>